--- a/SalesWebMvc/Views/Sellers/Edit.cshtml
+++ b/SalesWebMvc/Views/Sellers/Edit.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="None" class="text-danger"></div>
             <input type="hidden" asp-for="Seller.Id" />
             <div class="form-group">
                 <label asp-for="Seller.Name" class="control-label"></label>
@@ -36,6 +36,7 @@
             <div class="form-group">
                 <label asp-for="Seller.DepartamentId" class="control-label"></label>
                 <select asp-for="Seller.DepartamentId" asp-items="@(new SelectList(Model.Departaments, "Id","Name"))" class="form-control"></select>
+                <span asp-validation-for="Seller.DepartamentId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
